--- a/WoowahanFresh/WoowahanFresh/View/Base.lproj/Main.storyboard
+++ b/WoowahanFresh/WoowahanFresh/View/Base.lproj/Main.storyboard
@@ -31,7 +31,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2018.4000000000001" y="97.536945812807886"/>
+            <point key="canvasLocation" x="-1630" y="-649"/>
         </scene>
     </scenes>
 </document>
