--- a/WoowahanFresh/WoowahanFresh/View/Content/Home.storyboard
+++ b/WoowahanFresh/WoowahanFresh/View/Content/Home.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -33,6 +34,7 @@
                             <constraint firstItem="dL1-Od-GZq" firstAttribute="leading" secondItem="F3o-hn-b85" secondAttribute="leadingMargin" id="oIt-lS-1r0"/>
                             <constraint firstAttribute="bottomMargin" secondItem="dL1-Od-GZq" secondAttribute="bottom" id="rD9-DV-foR"/>
                         </constraints>
+                        <viewLayoutGuide key="safeArea" id="VkE-u9-8Pt"/>
                     </view>
                     <connections>
                         <outlet property="tableView" destination="dL1-Od-GZq" id="jJs-sw-DLB"/>
