--- a/WoowahanFresh/WoowahanFresh/View/Navigation/ShoppingList.storyboard
+++ b/WoowahanFresh/WoowahanFresh/View/Navigation/ShoppingList.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="d5J-cU-tyW">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="cBi-G3-PNe">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -10,10 +10,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--장바구니-->
         <scene sceneID="KVr-dh-NAW">
             <objects>
-                <viewController id="d5J-cU-tyW" sceneMemberID="viewController">
+                <viewController id="d5J-cU-tyW" customClass="ShoppingListNavicationViewController" customModule="WoowahanFresh" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="83s-9Y-O4o">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -32,9 +32,37 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="NAh-Pu-0bB"/>
                     </view>
+                    <toolbarItems/>
+                    <navigationItem key="navigationItem" title="장바구니" id="ZZa-Qh-17h">
+                        <barButtonItem key="rightBarButtonItem" title="Item" id="eJF-X0-0uf">
+                            <connections>
+                                <action selector="btnClose:" destination="d5J-cU-tyW" id="WrR-I6-KyE"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="1pk-oi-nku" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="992.79999999999995" y="26.53673163418291"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="Xc0-LN-ObR">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="cBi-G3-PNe" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="duQ-yH-7rz">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="d5J-cU-tyW" kind="relationship" relationship="rootViewController" id="XPZ-59-xfU"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="f3r-3E-ieZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-23.199999999999999" y="-671.51424287856082"/>
         </scene>
     </scenes>
 </document>
