Update, sprint2 save 구조 나누기

--- a/WoowahanFresh/WoowahanFresh/View/TabBar/MyPage.storyboard
+++ b/WoowahanFresh/WoowahanFresh/View/TabBar/MyPage.storyboard
@@ -24,6 +24,11 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="h9P-2j-9l5">
+                                <rect key="frame" x="67" y="87" width="240" height="128"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" red="0.55634254220000001" green="0.97934550050000002" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
@@ -34,6 +39,9 @@
                     </view>
                     <tabBarItem key="tabBarItem" title="마이페이지" image="mypage" id="Htw-d6-nZO"/>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
+                    <connections>
+                        <outlet property="testImage" destination="h9P-2j-9l5" id="PUX-gS-dcp"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Fej-6E-tXQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
