--- a/WoowahanFresh/WoowahanFresh/View/Content.storyboard
+++ b/WoowahanFresh/WoowahanFresh/View/Content.storyboard
@@ -25,7 +25,7 @@
                                         <rect key="frame" x="0.0" y="0.0" width="375" height="593"/>
                                         <color key="backgroundColor" red="0.0" green="0.99143940210000003" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <connections>
-                                            <segue destination="SFT-0C-vcC" kind="embed" id="lTl-O5-wrn"/>
+                                            <segue destination="SFT-0C-vcC" kind="embed" id="OYj-Cx-3jX"/>
                                         </connections>
                                     </containerView>
                                     <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="n9n-OJ-Eaw" userLabel="2Container View">
